TRV-1584 fixed the scroll bottom button visibility
(cherry picked from commit de3aacd)

--- a/src/main/webapp/bundles/travel/less/dropdownFilters.less
+++ b/src/main/webapp/bundles/travel/less/dropdownFilters.less
@@ -41,14 +41,6 @@
     width: 100%;
   }
 
-  .dropdown {
-    &.open {
-      .morePromptContainer {
-        display: none;
-      }
-    }
-  }
-
   .affix {
     .dropdown-menu {
       top: 50px;
@@ -95,14 +87,6 @@
   .dropdown-menu {
     position: fixed;
     width: 100%;
-  }
-
-  .dropdown {
-    &.open {
-      .morePromptContainer {
-        display: none;
-      }
-    }
   }
 
   .affix {
